# browser-agent

./: .gitignore  BROWSERGYM_IMAGE_DIGEST.txt  Dockerfile.browsergym-miniwob  README.md  main.py  notes.md  pyproject.toml  run_local_qwen35_vllm.sh  run_phase1_core_local_qwen35.sh  run_phase1_local_campaign_batch1.sh  run_phase1_smoke_glm47.sh  run_phase1_smoke_openrouter.sh
configs/: grpo_multiturn_phase_a2_qwen25_action_adapter.yaml  grpo_multiturn_phase_a_qwen25_action_adapter.yaml  grpo_multiturn_phase_b_qwen25_action_adapter.yaml  grpo_multiturn_qwen35_08b_action_mixedbest_weak4_shaped.yaml  grpo_multiturn_qwen35_08b_action_weak3_shaped.yaml  grpo_multiturn_qwen35_08b_action_weak3_shaped_gen4.yaml  grpo_multiturn_qwen35_08b_action_weak3_shaped_grpo.yaml  grpo_multiturn_qwen35_08b_action_weak3_shaped_stronger.yaml  grpo_multiturn_qwen35_2b_action_phase_hard.yaml  grpo_multiturn_qwen35_2b_action_phase_hard_gen4.yaml  grpo_multiturn_qwen35_2b_action_phase_hard_scaled.yaml  grpo_multiturn_qwen35_2b_action_phase_hard_shaped.yaml  grpo_multiturn_qwen35_2b_action_phase_refined.yaml  grpo_multiturn_qwen35_2b_action_phase_refined_shaped.yaml  grpo_multiturn_qwen35_2b_action_phase_small.yaml  grpo_multiturn_qwen35_2b_action_signal_slices.yaml  grpo_multiturn_qwen35_2b_reasoning_phase_hard.yaml  grpo_multiturn_smoke_qwen35_2b_action.yaml  grpo_multiturn_smoke_qwen35_2b_reasoning.yaml  grpo_smoke_qwen25_1p5b_click-test.yaml  grpo_smoke_qwen35_2b_reasoning_reinforced_click_button.yaml  qwen35_action_signal_slices.tsv  rollout_config.yaml  rollout_config_phase1_glm47.yaml  (+4 more)
(+68 files in other folders)
