[project]
name = "browser-agent"
version = "0.1.0"
description = "BrowserGym MiniWoB trace generation, analysis, and dataset preparation for browser-use model training"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "websockets>=15.0.1",
]
