[project]
name = "browser-agent"
version = "0.1.0"
description = "BrowserGym MiniWoB trace generation, analysis, dataset preparation, and local RL training for browser-use model experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.0.0",
    "huggingface-hub>=0.30.0",
    "openai>=1.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "websockets>=15.0.1",
]

[project.optional-dependencies]
rl = [
    "accelerate>=1.6.0",
    "bitsandbytes>=0.47.0",
    "llm-blender>=0.0.2",
    "mergekit>=0.1.4",
    "peft>=0.17.0",
    "torch>=2.5.0",
    "transformers>=5.3.0,<5.4.0",
    "trl>=0.25.1",
    "weave==0.52.35",
]
rl-vllm = [
    "vllm>=0.10.0",
]

[tool.setuptools]
py-modules = []
